Both Docker development containers working for frontend and backend

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,12 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile.dev
-      network: host
+      # network: host
     ports:
       - 8000:8000
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
+    ports:
+      - 8080:8080
