Adding configuation for SurrealDB, harder than it should have been

--- a/compose.yaml
+++ b/compose.yaml
@@ -14,3 +14,25 @@ services:
       dockerfile: Dockerfile.dev
     ports:
       - 8080:8080
+  surrealdb:
+    image: surrealdb/surrealdb:latest
+    volumes:
+      # Named Volume - Might change to Bind-Mount
+      - type: bind
+        source: /var/lib/surrealquizdata
+        target: /data
+    ports:
+      - 8001:8000
+    env_file:
+      - .env
+    entrypoint:
+      - /surreal
+      - start
+      - --auth
+      - --user
+      - $DB_USER
+      - --pass
+      - $DB_PASSWORD
+      - file:data/mydatabase.db
+# volumes:
+#   surrealdata:
