--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,4 +5,11 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.6.0"
+anyhow = "1.0.86"
+thiserror = "1.0.61"
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
+tracing = { version = "0.1.40", features = ["log"] }
+tracing-actix-web = "0.7.10"
+tracing-bunyan-formatter = "0.3.9"
+tracing-log = "0.2.0"
+tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
