--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4.6.0"
 anyhow = "1.0.86"
+reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls", "cookies"] }
 thiserror = "1.0.61"
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1.40", features = ["log"] }
@@ -13,3 +14,6 @@ tracing-actix-web = "0.7.10"
 tracing-bunyan-formatter = "0.3.9"
 tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
+
+[dev-dependencies]
+wiremock = "0.6.0"
