--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 [dependencies]
 leptos = { version = "0.6.11", features = ["csr"] }
 leptos_router = { version = "0.6.11", features = ["csr"] }
+serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.117"
+wasm-bindgen-futures = "0.4.42"
+web-sys = "0.3.69"
