--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-cors = "0.7.0"
 actix-web = "4.6.0"
 anyhow = "1.0.86"
 config = "0.14.0"
