--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -8,5 +8,9 @@ leptos = { version = "0.6.11", features = ["csr"] }
 leptos_router = { version = "0.6.11", features = ["csr"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
-web-sys = "0.3.69"
+
+[dependencies.web-sys]
+version = "0.3.69"
+features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] 
