--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,6 +12,7 @@ reqwest = { version = "0.12.4", default-features = false, features = ["json", "r
 serde = { version = "1.0.203", features = ["derive"] }
 serde-aux = "4.5.0"
 serde_json = "1.0.117"
+surrealdb = "1.5.1"
 thiserror = "1.0.61"
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1.40", features = ["log"] }
@@ -19,6 +20,8 @@ tracing-actix-web = "0.7.10"
 tracing-bunyan-formatter = "0.3.9"
 tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
+models = { path = "../models" }
+uuid = { version = "1.8.0", features = ["v4"] }
 
 [dev-dependencies]
 wiremock = "0.6.0"
