--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -22,6 +22,7 @@ tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
 models = { path = "../models" }
 uuid = { version = "1.8.0", features = ["v4"] }
+argon2 = { version = "0.5.3", features = ["std"] }
 
 [dev-dependencies]
 wiremock = "0.6.0"
