--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -23,6 +23,8 @@ tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"]
 models = { path = "../models" }
 uuid = { version = "1.8.0", features = ["v4"] }
 argon2 = { version = "0.5.3", features = ["std"] }
+secrecy = { version = "0.8.0", features = ["serde"] }
+rand = { version = "0.8.5", features = ["std_rng"] }
 
 [dev-dependencies]
 wiremock = "0.6.0"
