--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -25,6 +25,8 @@ uuid = { version = "1.8.0", features = ["v4"] }
 argon2 = { version = "0.5.3", features = ["std"] }
 secrecy = { version = "0.8.0", features = ["serde"] }
 rand = { version = "0.8.5", features = ["std_rng"] }
+actix-session = "0.9.0"
+chrono = "0.4.38"
 
 [dev-dependencies]
 wiremock = "0.6.0"
