--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -12,6 +12,7 @@ wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
 models = { path = "../models" }
 console_error_panic_hook = "0.1.7"
+serde-wasm-bindgen = "0.6.5"
 
 [dependencies.web-sys]
 version = "0.3.69"
