Finished the Surrealize macro, I think. Going to check with cargo-expand

--- a/models/Cargo.toml
+++ b/models/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.203", features = ["derive"] }
-
+surrealdb = "1.5.3"
+surrealize_macro = { path = "../surrealize_macro" }
