--- a/surrealize_macro/Cargo.toml
+++ b/surrealize_macro/Cargo.toml
@@ -9,5 +9,6 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1.0.86"
 quote = "1.0.36"
-surrealdb = "1.5.3"
+surrealdb = { version = "1.5"  }
 syn = { version = "2.0.68", features = ["full"] }
+tokio = { version = "1" }
