--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,18 @@
 [workspace]
+resolver = "2"
 members = [
   "frontend",
   "backend",
   "models",
-  "surrealize_macro"
+  "jsonmodels",
+  "surrealize_macro",
 ]
+
+[workspace.package]
+authors = ["Kevin Sullivan"]
+version = "0.3.0"
+license = "MIT"
+repository = "https://github.com/ks982579/rust-quiz-web-app"
+readme = "README.md"
+keywords = ["rust", "actix-web", "leptos", "web", "quiz"]
+categories = ["web-application"]
