--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ members = [
 
 [workspace.package]
 authors = ["Kevin Sullivan"]
-version = "0.3.0"
+version = "0.4.0"
+license-file = "LICENSE"
 license = "MIT"
 repository = "https://github.com/ks982579/rust-quiz-web-app"
 readme = "README.md"
