--- a/models/Cargo.toml
+++ b/models/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "models"
-version = "0.3.0"
 edition = "2021"
+version.workspace = true
+authors.workspace = true
 
 [dependencies]
 secrecy = { version = "0.8.0", features = ["serde"] }
