--- a/surrealize_macro/Cargo.toml
+++ b/surrealize_macro/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "surrealize_macro"
-version = "0.1.0"
 edition = "2021"
+version.workspace = true
+authors.workspace = true
 
 [lib]
 proc-macro = true
