--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -28,6 +28,7 @@ secrecy = { version = "0.8.0", features = ["serde"] }
 rand = { version = "0.8.5", features = ["std_rng"] }
 actix-session = "0.9.0"
 chrono = "0.4.38"
+urlencoding = "2.1.3"
 
 [dev-dependencies]
 wiremock = "0.6.0"
