--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -14,6 +14,7 @@ wasm-bindgen-futures = "0.4.42"
 console_error_panic_hook = "0.1.7"
 serde-wasm-bindgen = "0.6.5"
 urlencoding = "2.1.3"
+rand = "0.8.5"
 
 [dependencies.web-sys]
 version = "0.3.69"
