--- a/Dockerfile.frontend.prod
+++ b/Dockerfile.frontend.prod
@@ -9,11 +9,11 @@ RUN rustup target add wasm32-unknown-unknown
 # ENV TRUNK_SERVE_PORT 8080
 WORKDIR /app
 COPY . .
-RUN trunk build --release
+RUN trunk build --release ./frontend/index.html
 # CMD ["trunk", "serve", "--port", "8080"]
 # CMD ["trunk", "serve"]
 
 
 FROM nginx:alpine
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/frontend/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/nginx.conf
