--- a/Dockerfile.frontend.prod
+++ b/Dockerfile.frontend.prod
@@ -16,4 +16,7 @@ RUN trunk build --release ./frontend/index.html
 
 FROM nginx:alpine
 COPY --from=builder /app/frontend/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY ./frontend/nginx.conf /etc/nginx/nginx.conf
+EXPOSE 80
+EXPOSE 443
+CMD ["nginx", "-g", "daemon off;"]
