--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,3 +1,4 @@
+# -- Necessary, NGINX wouldn't work without
 events {
   worker_connections 1024;
 }
@@ -16,7 +17,6 @@ worker_processes auto;
 #     ssl_certificate /etc/nginx/ssl/fullchain.pem;
 #     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 #     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_prep
 #
 #     location / {
 #       root /usr/share/nginx/html;
@@ -35,36 +35,69 @@ http {
   # removes NGINX Version from footer of errors
   server_tokens off;
   charset utf-8;
+  # include /etc/nginx/mime.types;
+  # default_type application/octet-stream;
+
+  # types {
+  #   application/javascript mjs;
+  #   # application/wasm wasm;
+  # }
 
   server {
     # default_server is just a flag, no value
     listen 80 default_server;
 
-    server_name _;
+    server_name quiztestapp.io;
+    # server_name kevsquizapp.com;
 
     return 301 https://$server_name$request_uri;
 
-    # Renewal Challenge
+    # -- Renewal Challenge
     location ~ /.well-knows/acme-challenge/ {
-      # Same as in certbot container
+      # -- Same as in certbot container
       root /var/www/cerbot;
     }
   }
   server {
-    listen 443 ssl http2;
-#     ssl_certificate /etc/nginx/ssl/fullchain.pem;
-#     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-    server_name localhost;
+    listen 443 ssl;
+    ssl_certificate /etc/letsencrypt/live/kevsquizapp.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/kevsquizapp.com/privkey.pem;
+    # ssl_certificate /etc/letsencrypt/live/kevsquizapp.com/fullchain.pem;
+    # ssl_certificate_key /etc/letsencrypt/live/kevsquizapp.com/privkey.pem;
+    server_name quiztestapp.io;
+    # server_name kevsquizapp.com;
+    ssl_protocols TLSv1.2 TLSv1.3;
 
-    location / {
-      root /usr/share/html;
-      try_files $uri $uri/ /index.html;
+    types {
+      application/javascript js;
+      application/wasm wasm;
+      text/html html htm shtml;
     }
 
-    location /api {
-      proxy_pass http://backend:8001;
+    location / {
+      root /usr/share/nginx/html;
+      # index index.html;
+      try_files $uri $uri/ index.html =404;
+    }
+
+    # This part is crucial for Single Page Applications (SPAs)
+    # location ~* \.(?:js|css|wasm)$ {
+    location ~* \.(js|css|wasm)$ {
+      # expires 1y;
+      # access_log off;
+      # add_header Cache-Control "public";
+      # -- Disable Cashing for Testing
+      add_header Cache-Control "no-store, no-cache, must-revalidate";
+      root /usr/share/nginx/html;
+      try_files $uri $uri/ =404;
+    }
+
+    location /api/ {
+      proxy_pass http://actixbackend:8002/api/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Renewal Challenge
@@ -72,5 +105,9 @@ http {
       # Same as in certbot container
       root /var/www/cerbot;
     }
+    # Additional security headers
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
   }
 }
