--- a/Dockerfile.frontend.prod
+++ b/Dockerfile.frontend.prod
@@ -9,6 +9,7 @@ RUN rustup target add wasm32-unknown-unknown
 # ENV TRUNK_SERVE_PORT 8080
 WORKDIR /app
 COPY . .
+ENV APP__BACKEND_URL="/api/v01/"
 RUN trunk build --release ./frontend/index.html
 # CMD ["trunk", "serve", "--port", "8080"]
 # CMD ["trunk", "serve"]
@@ -19,4 +20,5 @@ COPY --from=builder /app/frontend/dist /usr/share/nginx/html
 COPY ./frontend/nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 EXPOSE 443
+ENV APP__BACKEND_URL="/api/v01/"
 CMD ["nginx", "-g", "daemon off;"]
