--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -47,7 +47,7 @@ http {
     # default_server is just a flag, no value
     listen 80 default_server;
 
-    server_name quiztestapp.io;
+    server_name quiztestapp.io www.quiztestapp.io;
     # server_name kevsquizapp.com;
 
     return 301 https://$server_name$request_uri;
@@ -64,7 +64,7 @@ http {
     ssl_certificate_key /etc/letsencrypt/live/kevsquizapp.com/privkey.pem;
     # ssl_certificate /etc/letsencrypt/live/kevsquizapp.com/fullchain.pem;
     # ssl_certificate_key /etc/letsencrypt/live/kevsquizapp.com/privkey.pem;
-    server_name quiztestapp.io;
+    server_name quiztestapp.io www.quiztestapp.io;
     # server_name kevsquizapp.com;
     ssl_protocols TLSv1.2 TLSv1.3;
 
@@ -72,13 +72,9 @@ http {
       application/javascript js;
       application/wasm wasm;
       text/html html htm shtml;
+      text/css css;
     }
 
-    location / {
-      root /usr/share/nginx/html;
-      # index index.html;
-      try_files $uri $uri/ index.html =404;
-    }
 
     # This part is crucial for Single Page Applications (SPAs)
     # location ~* \.(?:js|css|wasm)$ {
@@ -92,7 +88,8 @@ http {
       try_files $uri $uri/ =404;
     }
 
-    location /api/ {
+    # -- Prefer this over Regex
+    location ^~ /api/ {
       proxy_pass http://actixbackend:8002/api/;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
@@ -104,6 +101,19 @@ http {
     location ~ /.well-knows/acme-challenge/ {
       # Same as in certbot container
       root /var/www/cerbot;
+    }
+
+    location / {
+      root /usr/share/nginx/html;
+      # index index.html;
+      try_files $uri $uri/ /index.html;
+    }
+
+    # -- Catching remaining routes to serve
+    location ~ ^/(.*)$ {
+      root /usr/share/nginx/html;
+      # index index.html;
+      try_files /index.html =404;
     }
     # Additional security headers
     add_header X-Frame-Options "SAMEORIGIN";
