--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,44 +4,12 @@ events {
 }
 worker_processes auto;
 
-# http {
-#   server {
-#     listen 80;
-#     server_name domain.com;
-#     return 301 https://$server_name$request_uri;
-#   }
-#
-#   server {
-#     listen 443 ssl;
-#     server_name domain.com;
-#     ssl_certificate /etc/nginx/ssl/fullchain.pem;
-#     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#
-#     location / {
-#       root /usr/share/nginx/html;
-#       try_files $uri $uri/ /index.html;
-#     }
-#
-#     location /api {
-#       proxy_pass http://backend:8080;
-#       proxy_set_header Host $host;
-#       proxy_set_header X-Real-IP $remove_addr;
-#     }
-#   }
-# }
-
 http {
-  # removes NGINX Version from footer of errors
+  # -- removes NGINX Version from footer of errors
   server_tokens off;
   charset utf-8;
   # include /etc/nginx/mime.types;
   # default_type application/octet-stream;
-
-  # types {
-  #   application/javascript mjs;
-  #   # application/wasm wasm;
-  # }
 
   server {
     # default_server is just a flag, no value
@@ -50,22 +18,19 @@ http {
     server_name quiztestapp.io www.quiztestapp.io;
     # server_name kevsquizapp.com;
 
-    return 301 https://$server_name$request_uri;
-
     # -- Renewal Challenge
-    location ~ /.well-knows/acme-challenge/ {
+    location ^~ /.well-known/acme-challenge/ {
       # -- Same as in certbot container
-      root /var/www/cerbot;
+      root /var/www/certbot;
     }
+
+    return 301 https://$server_name$request_uri;
   }
   server {
     listen 443 ssl;
     ssl_certificate /etc/letsencrypt/live/kevsquizapp.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/kevsquizapp.com/privkey.pem;
-    # ssl_certificate /etc/letsencrypt/live/kevsquizapp.com/fullchain.pem;
-    # ssl_certificate_key /etc/letsencrypt/live/kevsquizapp.com/privkey.pem;
     server_name quiztestapp.io www.quiztestapp.io;
-    # server_name kevsquizapp.com;
     ssl_protocols TLSv1.2 TLSv1.3;
 
     types {
@@ -75,9 +40,7 @@ http {
       text/css css;
     }
 
-
     # This part is crucial for Single Page Applications (SPAs)
-    # location ~* \.(?:js|css|wasm)$ {
     location ~* \.(js|css|wasm)$ {
       # expires 1y;
       # access_log off;
@@ -98,9 +61,9 @@ http {
     }
 
     # Renewal Challenge
-    location ~ /.well-knows/acme-challenge/ {
+    location ^~ /.well-known/acme-challenge/ {
       # Same as in certbot container
-      root /var/www/cerbot;
+      root /var/www/certbot;
     }
 
     location / {
