--- a/Dockerfile.backend.prod
+++ b/Dockerfile.backend.prod
@@ -1,33 +1,18 @@
-# FROM rust:1.78-slim-bookworm
-#
-# WORKDIR /app
-# RUN apt update && apt install lld clang -y
-# COPY . .
-# EXPOSE 8080
-# # RUN cargo build
-#
-# # ENV APP_ENVIRONMENT development
-# # ENTRYPOINT ["./target/debug/backend"]
-# # CMD ["./target/debug/backend"]
-# CMD ["cargo", "run"]
-
-# -- BUILDER STAGE
+# -- BUILDER STAGE - to build binary
 FROM rust:latest AS builder
 RUN apt update && apt install lld clang -y
 WORKDIR /app
-# RUN cargo init . --vcs none
 COPY . .
 RUN cargo build --release --bin backend
 
-# -- RUNTIME STAGE
+# -- RUNTIME STAGE - runs binary, does not require Rust
 FROM debian:bookworm-slim AS runtime
-# RUN apk add --no-cache libc6-compat
 WORKDIR /app
+# Configuration required at runtime
 COPY --from=builder /app/backend/configuration /app/configuration
 COPY --from=builder /app/target/release/backend /app
-# Application should listen for what port to run on
+# Application should listen port 8002 to run on
 EXPOSE 8002
 ENV APP_ENVIRONMENT production
 ENV QUIZAPP_APPLICATION__HOST 0.0.0.0
 CMD ["./backend"]
-# needs configuration directory
