Setting up more scripts for an easier local deployment process

--- a/frontend/nginx-local.conf
+++ b/frontend/nginx-local.conf
@@ -14,7 +14,6 @@ http {
     listen 80 default_server;
 
     server_name quiztestapp.io www.quiztestapp.io;
-    # server_name kevsquizapp.com www.kevsquizapp.com;
 
     # -- Renewal Challenge
     location ^~ /.well-known/acme-challenge/ {
@@ -26,10 +25,10 @@ http {
   }
   server {
     listen 443 ssl;
-    ssl_certificate /etc/letsencrypt/live/kevsquizapp.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/kevsquizapp.com/privkey.pem;
+    ssl_certificate /etc/openssl/fullchain.pem;
+    ssl_certificate_key /etc/openssl/privkey.pem;
     server_name quiztestapp.io www.quiztestapp.io;
-    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
 
     types {
       application/javascript js;
