--- a/frontend/nginx-prod.conf
+++ b/frontend/nginx-prod.conf
@@ -29,7 +29,7 @@ http {
     ssl_certificate /etc/letsencrypt/live/kevsquizapp.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/kevsquizapp.com/privkey.pem;
     server_name quiztestapp.io www.quiztestapp.io;
-    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
 
     types {
       application/javascript js;
