--- a/frontend/nginx-local.conf
+++ b/frontend/nginx-local.conf
@@ -15,7 +15,7 @@ http {
 
     server_name quiztestapp.io www.quiztestapp.io;
 
-    # -- Renewal Challenge
+    # -- Renewal Challenge / Not required locally but not removing
     location ^~ /.well-known/acme-challenge/ {
       # -- Same as in certbot container
       root /var/www/certbot;
@@ -69,7 +69,7 @@ http {
       try_files $uri $uri/ /index.html;
     }
 
-    # -- Catching remaining routes to serve
+    # -- Renewal Challenge / Not required locally but not removing
     location ~ ^/(.*)$ {
       root /usr/share/nginx/html;
       # index index.html;
