--- a/frontend/nginx-prod.conf
+++ b/frontend/nginx-prod.conf
@@ -13,8 +13,7 @@ http {
     # default_server is just a flag, no value
     listen 80 default_server;
 
-    server_name quiztestapp.io www.quiztestapp.io;
-    # server_name kevsquizapp.com www.kevsquizapp.com;
+    server_name kevsquizapp.com www.kevsquizapp.com;
 
     # -- Renewal Challenge
     location ^~ /.well-known/acme-challenge/ {
@@ -28,7 +27,7 @@ http {
     listen 443 ssl;
     ssl_certificate /etc/letsencrypt/live/kevsquizapp.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/kevsquizapp.com/privkey.pem;
-    server_name quiztestapp.io www.quiztestapp.io;
+    server_name kevsquizapp.com www.kevsquizapp.com;
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
 
     types {
